# homework22

./: .env.example  .gitignore  README.MD  aaa.py  category_fixture.json  db.sqlite3  product_fixture.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpost_author.py  0003_blog_delete_blogpost.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_test_products.py  create_moderator_group.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0002_alter_category_options_alter_product_options_and_more.py
catalog/templates/: base.html  catalog.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html
catalog/templates/catalog/: product_form.html
catalog/templates/partials/: _navbar.html
config/: settings.py  urls.py
newapp/templates/: home.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py
users/templates/users/: login.html  register.html  welcome_email.html
